--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-multi-carousel": "^2.8.3",
+    "react-slick": "^0.29.0",
+    "sass": "^1.62.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
